--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-snowfall": "^1.1.1",
     "react-typical": "^0.1.3",
     "web-vitals": "^1.1.2"
   },
